JumpScript/tests/baselines/reference/parserForOfStatement11.errors.txt
tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement11.jump(1,22): error TS2304: Cannot find name 'X'.


==== tests/cases/conformance/parser/ecmascript6/Iterators/parserForOfStatement11.jump (1 errors) ====
    for (const [a, b] of X) {
                         ~
!!! error TS2304: Cannot find name 'X'.
    }